Updated creation user flow
